--- a/content/20161230.md
+++ b/content/20161230.md
@@ -1,23 +1,13 @@
 Title: onshape 零組件繪製 40223233
-
 Date: 2016-12-30 11:36
-Category: Misc
+Category:Misc
 Tags: 練習
 Author: 40223233
 
 立用協同的方式跟組員分工合作
-工件網址: https://cad.onshape.com/documents/f723dfa2e7d650d3c8d16304/w/7ae4d158c2e340b2b1c0e43c/e/e8d9ea50e2cb1fdf85595f27
 
 
 <!-- PELICAN_END_SUMMARY -->
 
-這裡為文章主要內容
 
-程式碼
-
-<pre class="brush: python;">
-print(" https://cad.onshape.com/documents/f723dfa2e7d650d3c8d16304/w/7ae4d158c2e340b2b1c0e43c/e/e8d9ea50e2cb1fdf85595f27
-")
-</pre>
-
-
+<a href="https://cad.onshape.com/documents/f723dfa2e7d650d3c8d16304/w/7ae4d158c2e340b2b1c0e43c/e/e8d9ea50e2cb1fdf85595f27">Onshape 分組  組合件</a>
