--- a/content/20161230.md
+++ b/content/20161230.md
@@ -1,6 +1,6 @@
-Title: onshape 零組件繪製 40223233
+Title: 2016Fall onshape零組件繪製
 Date: 2016-12-30 11:36
-Category:Misc
+Category: Misc
 Tags: 練習
 Author: 40223233
 
