solvespace and onshape

--- a/content/20160114.md
+++ b/content/20160114.md
@@ -1,18 +1,16 @@
-Title: 2016Fall Solvespace 平面四連桿機構模擬 40223233
+Title: 2016Fall Solvespace 組合練習 40223233
 Date: 2017-01-14 15:00
 Category: Misc
 Tags: 練習
 Author: 40223233
 
-Solvespace平面四連桿機構模擬
+Solvespace 組合件練習
 
-<img src="./../20170114/solvespace/p2.png" width="600" />
 
-座標位置使用excel 繪製
-
-<img src="./../20170114/solvespace/P1.png" width="600" />
 
 <!-- PELICAN_END_SUMMARY -->
+
+<script src="./../HW11/40223233 comb.slvs"></script>
 
 
 <a href="https://vimeo.com/199426890">影片網址Pt1</a>
