--- a/content/20161230.md
+++ b/content/20161230.md
@@ -9,5 +9,23 @@ Author: 40223233
 
 <!-- PELICAN_END_SUMMARY -->
 
+零件圖
 
+<img src="./../20170114/onshape/p1.png" width="600" />
+<img src="./../20170114/onshape/p2.png" width="600" />
+<img src="./../20170114/onshape/p3.png" width="600" />
+<img src="./../20170114/onshape/p4.png" width="600" />
+<img src="./../20170114/onshape/p5.png" width="600" />
+<img src="./../20170114/onshape/p6.png" width="600" />
+<img src="./../20170114/onshape/p7.png" width="600" />
+<img src="./../20170114/onshape/p8.png" width="600" />
+
+組合件圖
+
+<img src="./../20170114/onshape/c1.png" width="600" />
+
+影片說明:<a href="https://vimeo.com/199431577">影片網址Pt1</a>
+                 <a href="https://vimeo.com/199432088">影片網址Pt1</a>
+
+網址連結:
 <a href="https://cad.onshape.com/documents/f723dfa2e7d650d3c8d16304/w/7ae4d158c2e340b2b1c0e43c/e/e8d9ea50e2cb1fdf85595f27">Onshape 分組  組合件</a>
