--- a/content/20160114.md
+++ b/content/20160114.md
@@ -1,4 +1,4 @@
-Title: 2016Fall Solvespace 組合練習 40223233
+﻿Title: 2016Fall Solvespace 組合練習 40223233
 Date: 2017-01-14 15:00
 Category: Misc
 Tags: 練習
@@ -10,7 +10,7 @@ Solvespace 組合件練習
 
 <!-- PELICAN_END_SUMMARY -->
 
-<script src="./../HW11/40223233 comb.slvs"></script>
+<img src="./../20170114/solvespace/p2.png" width="600" />   <img src="./../20170114/solvespace/P1.png" width="600" />
 
 
 <a href="https://vimeo.com/199426890">影片網址Pt1</a>
