--- a/content/20160114.md
+++ b/content/20160114.md
@@ -1,10 +1,10 @@
-﻿Title: 2016Fall Solvespace 組合練習 40223233
+Title: 2016Fall Solvespace 四連桿機構模擬 40223233
 Date: 2017-01-14 15:00
 Category: Misc
 Tags: 練習
 Author: 40223233
 
-Solvespace 組合件練習
+四連桿機構模擬
 
 
 
@@ -16,3 +16,4 @@ Solvespace 組合件練習
 <a href="https://vimeo.com/199426890">影片網址Pt1</a>
 
 <a href="https://vimeo.com/199427074">影片網址Pt2</a>
+
