--- a/content/20160118.md
+++ b/content/20160118.md
@@ -15,6 +15,7 @@ solvespace 組合件
 組合件:
 <img src="./../20170118/solvespace/c1.png" width="600" />
 
+https://github.com/40223233/2016fallcadp_hw/tree/gh-pages/HW11
 
-
+<script src="https://embed.github.com/view/3d/40223233/2016fallcadp_hw/gh-pages/HW11/40223233-2.stl"></script>
 
